--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+#      ddl-auto: create
     show-sql: true
     database-platform: org.hibernate.community.dialect.SQLiteDialect
     defer-datasource-initialization: true
@@ -24,3 +25,6 @@ web:
   resources:
     #정적 파일 탐색 장소
     static-locations: file:media/,classpath:/static
+
+jwt:
+  secret: ${SECRET}
